CKS/trivy-k8s-webhook.yml
apiVersion: v1
kind: Pod
metadata:
    name: trivy-k8s-webhook
    namespace: kube-system
spec:
    hostNetwork: true
    containers:
    - name: trivy-k8s-webhook
      image: linuxacademycontent/trivy-k8s-webhook:0.0.1
      imagePullPolicy: Always
      ports:
      - name: webhook
        containerPort: 8090
        protocol: TCP
---
# sudo chown root:root /etc/kubernetes/manifests/trivey-k8s-webhook.yml
# sudo chmod 600 /etc/kubernetes/manifests/trivy-k8s-webhook.yml
