CKS/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tls-ingress
    namespace: ingresstest
spec:
    tls:
    - hosts:
        - ingress.test
      secretName: ingress-tls
    rules:
    - host: ingress.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend: 
              service:
                name: ingresstest-nginx-svc
                port:
                  number: 80
